--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <title>QRCode Component</title>
 
 </head>
 
 <body>
 
-<div class="background">
+<main class="background">
   <img class="qrcodeImage" src="images/image-qr-code.png" alt="QRCode Image">
   <h1>Improve your front-end skills by building projects</h1>
   <p>Scan the QRCode to visit Frontend Mentor and take your coding skills to the next level</p>
-</div>
+</main>
 
 <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
