--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
   <p>Scan the QRCode to visit Frontend Mentor and take your coding skills to the next level</p>
 </main>
 
-<div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/AmolRai">AmolRai</a>.
-</div>
+  <main>  
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/AmolRai">AmolRai</a>.
+    </div>
+  </main>
 
 </body>
 </html>
